# solana-grpc-indexer

./: README.md  cargo.toml  docker-compose.yaml
core/: Cargo.toml
core/src/: config.rs  main.rs
ingest/: Cargo.toml
ingest/src/: lib.rs  subscriptions.rs  types.rs  yellowstone_client.rs
processor/: Cargo.toml
processor/src/: clickhouse.rs  clickhouse_types.rs  lib.rs  query.rs  transformer.rs  worker.rs
query/: Cargo.toml
query/src/: main.rs
