[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
tonic = { version = "0.14.1", features = ["tls-native-roots"] }
base64 = "0.22.0"
bs58 = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
clickhouse = "0.14.1"
redis = "1.0.2"
serde = "1.0.2"
serde_json = "1.0.143"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
solana-sdk = "3.0.0"
dotenv = "0.15.0"
